# Suzaku

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  taglib_wrapper.cpp  taglib_wrapper.h
app/src/main/jni/: taglib_wrapper.c
app/src/main/res/anim/: left_in.xml  left_out.xml  right_in.xml  right_out.xml
app/src/main/res/drawable/: button_background.xml  grad_black_graydark.xml  grad_graydark_black.xml  listitem_background.xml  listview_selector.xml  pressed_background.xml  seekbar_background_.xml  seekbar_progress_.xml  seekbar_progress_layer.xml  seekbar_thumb.xml  seekbar_thumb_pressed.xml  seekbar_thumb_unpressed.xml  shadow_bottom.xml  shadow_top.xml  vertical_line.xml
app/src/main/res/layout/: activity_main.xml  activity_setting.xml  activity_track.xml  activity_track_detail.xml  dialog_create_playlist.xml  dialog_library_folder.xml  dialog_listitem_dir.xml  dialog_listitem_lib_folder.xml  dialog_listitem_playlist.xml  dialog_progress.xml  dialog_select_folder.xml  dialog_select_playlist.xml  fragment_album.xml  fragment_artist.xml  fragment_base.xml  fragment_dock.xml  fragment_listview.xml  fragment_main.xml  fragment_playlist.xml  fragment_track_detail_artwork.xml  fragment_track_detail_file.xml  listitem_text.xml  (+18 more)
app/src/main/res/layout-land/: activity_track.xml  fragment_track_detail_artwork.xml
gen-libs/: build.gradle
gen-libs/src/main/: AndroidManifest.xml
gen-libs/src/main/cpp/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
(+138 files in other folders)
